--- a/site/css/style.css
+++ b/site/css/style.css
@@ -20,10 +20,14 @@ head{}
         grid-auto-rows: minmax(100px, auto);
       }
       .one {z-index:1;color:white;font-size:12px;
-        grid-column: 1/3;
-        grid-row: 1/3;
+        grid-column:1;
+        grid-row: 1;
       }
    .one:hover{
+            }
+            .p-1 {z-index:1;color:white;font-size:12px;
+              grid-column:1;
+              grid-row: 1;
             }
 
       .two {background-color: rgba(33, 252, 222, 0.4);
@@ -33,54 +37,82 @@ head{}
    .two:hover{color:rgba(33, 252, 222, 1);background-color: rgba(33, 252, 222, 1);
       grid-column: 1/5;
      grid-row: 1/3;}
+     .p-2 {z-index:1;color:white;font-size:12px;
+      grid-column:1;
+      grid-row: 1;
+     }
 
       .three {background-color: rgba(252, 98, 33, 0.4);
         display:none;grid-column: 4/6;
         grid-row: 3/6;
         }
    .three:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
-
+   .p-3 {z-index:1;color:white;font-size:12px;
+    grid-column:1;
+    grid-row: 1;
+   }
       .four {background-color: rgba(33, 252, 222, 0.4);
          display:none;grid-column: 2/5;
         grid-row: 5/7;
         }
    .four:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
 
-
+   .p-4 {z-index:1;color:white;font-size:12px;
+    grid-column:1;
+    grid-row: 1;
+   }
       .five {background-color: rgba(252, 98, 33, 0.4);
          display:none;grid-column:1/3;
          grid-row: 6/10;
       }
    .five:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
-
+   .p-5 {z-index:1;color:white;font-size:12px;
+    grid-column:1;
+    grid-row: 1;
+   }
       .six {background-color: rgba(33, 252, 222, 0.4);
          display:none;grid-column: 2/5;
         grid-row: 9/11;
       }
    .six:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
-
+   .p-6 {z-index:1;color:white;font-size:12px;
+    grid-column:1;
+    grid-row: 1;
+   }
       .seven {background-color: rgba(252, 98, 33, 0.4);
          display:none;grid-column: 4/6;
          grid-row: 10/14;
       }
    .seven:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
-
+   .p-7 {z-index:1;color:white;font-size:12px;
+    grid-column:1;
+    grid-row: 1;
+   }
       .eight {background-color: rgba(33, 252, 222, 0.4);
          display:none;grid-column: 2/5;
          grid-row: 13/16;
       }
    .eight:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
-
+   .p-8 {z-index:1;color:white;font-size:12px;
+    grid-column:1;
+    grid-row: 1;
+   }
       .nine {background-color: rgba(252, 98, 33, 0.4);
          display:none;grid-column: 2/4;
          grid-row: 15/18;
       }
    .nine:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
-
+   .p-9{z-index:1;color:white;font-size:12px;
+    grid-column:1;
+    grid-row:1 ;
+   }
       .ten {background-color: rgba(33, 252, 222, 0.4);
          display:none;display:none;grid-column: 3/5;
          grid-row: 17/21;
       }
    .ten:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
-
+   .p-10{z-index:1;color:white;font-size:12px;
+    grid-column:1;
+    grid-row: 1;
+   }
    footer{}
