--- a/site/css/style.css
+++ b/site/css/style.css
@@ -27,9 +27,9 @@ head{}
       grid-column:1/4;
       grid-row:1/4
             }
-            .p-1 {z-index:1;color:white;font-size:12px;
+            .p-1 {z-index:1;color:white;font-size:26px;
               grid-column:1;
-              grid-row: 1;
+              grid-row: 1/4;
             }
 
       .two {background-color: rgba(33, 252, 222, 0.4);
@@ -39,7 +39,7 @@ head{}
    .two:hover{color:rgba(33, 252, 222, 1);background-color: rgba(33, 252, 222, 1);
       grid-column: 1/5;
      grid-row: 1/3;}
-     .p-2 {z-index:1;color:white;font-size:12px;
+     .p-2 {display:none;z-index:1;color:white;font-size:12px;
       grid-column:1;
       grid-row: 1;
      }
@@ -49,7 +49,7 @@ head{}
         grid-row: 3/6;
         }
    .three:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
-   .p-3 {z-index:1;color:white;font-size:12px;
+   .p-3 {display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row: 1;
    }
@@ -59,7 +59,7 @@ head{}
         }
    .four:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
 
-   .p-4 {z-index:1;color:white;font-size:12px;
+   .p-4 {display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row: 1;
    }
@@ -68,7 +68,7 @@ head{}
          grid-row: 6/10;
       }
    .five:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
-   .p-5 {z-index:1;color:white;font-size:12px;
+   .p-5 {display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row: 1;
    }
@@ -77,7 +77,7 @@ head{}
         grid-row: 9/11;
       }
    .six:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
-   .p-6 {z-index:1;color:white;font-size:12px;
+   .p-6 {display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row: 1;
    }
@@ -86,7 +86,7 @@ head{}
          grid-row: 10/14;
       }
    .seven:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
-   .p-7 {z-index:1;color:white;font-size:12px;
+   .p-7 {display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row: 1;
    }
@@ -95,7 +95,7 @@ head{}
          grid-row: 13/16;
       }
    .eight:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
-   .p-8 {z-index:1;color:white;font-size:12px;
+   .p-8 {display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row: 1;
    }
@@ -104,7 +104,7 @@ head{}
          grid-row: 15/18;
       }
    .nine:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
-   .p-9{z-index:1;color:white;font-size:12px;
+   .p-9{display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row:1 ;
    }
@@ -113,7 +113,7 @@ head{}
          grid-row: 17/21;
       }
    .ten:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
-   .p-10{z-index:1;color:white;font-size:12px;
+   .p-10{display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row: 1;
    }
