--- a/site/css/style.css
+++ b/site/css/style.css
@@ -19,11 +19,11 @@ head{}
         grid-gap: 0px;
         grid-auto-rows: minmax(100px, auto);
       }
-      .one {;color:black;font-size:12px;background-color:blue;
+      .one {;color:black;font-size:12px;background-color:cyan;
         grid-column:2/4;
         grid-row: 1/2;
       }
-   .one:hover{background-color:cyan;
+   .one:hover{background-color:blue;
       grid-column:1/4;
       grid-row:1/4
             }
@@ -32,11 +32,11 @@ head{}
               grid-row: 1/4;
             }
 
-      .two {background-color: rgba(33, 252, 222, 0.4);
+      .two {color:black;font-size:12px;background-color:magenta;
         grid-column: 3/5;
         grid-row: 1/3;
       }
-   .two:hover{color:rgba(33, 252, 222, 1);background-color: rgba(33, 252, 222, 1);
+   .two:hover{background-color:red;
       grid-column: 1/5;
      grid-row: 1/3;}
      .p-2 {display:none;z-index:1;color:white;font-size:12px;
@@ -44,75 +44,75 @@ head{}
       grid-row: 1;
      }
 
-      .three {background-color: rgba(252, 98, 33, 0.4);
+      .three {;color:black;font-size:12px;background-color:cyan;
         display:none;grid-column: 4/6;
         grid-row: 3/6;
         }
-   .three:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
+   .three:hover{background-color:blue;}
    .p-3 {display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row: 1;
    }
-      .four {background-color: rgba(33, 252, 222, 0.4);
+      .four {color:black;font-size:12px;background-color:magenta;
          display:none;grid-column: 2/5;
         grid-row: 5/7;
         }
-   .four:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
+   .four:hover{background-color:red;}
 
    .p-4 {display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row: 1;
    }
-      .five {background-color: rgba(252, 98, 33, 0.4);
+      .five {;color:black;font-size:12px;background-color:cyan;
          display:none;grid-column:1/3;
          grid-row: 6/10;
       }
-   .five:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
+   .five:hover{background-color:blue;}
    .p-5 {display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row: 1;
    }
-      .six {background-color: rgba(33, 252, 222, 0.4);
+      .six {color:black;font-size:12px;background-color:magenta;
          display:none;grid-column: 2/5;
         grid-row: 9/11;
       }
-   .six:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
+   .six:hover{background-color:red;}
    .p-6 {display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row: 1;
    }
-      .seven {background-color: rgba(252, 98, 33, 0.4);
+      .seven {;color:black;font-size:12px;background-color:cyan;
          display:none;grid-column: 4/6;
          grid-row: 10/14;
       }
-   .seven:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
+   .seven:hover{background-color:blue;}
    .p-7 {display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row: 1;
    }
-      .eight {background-color: rgba(33, 252, 222, 0.4);
+      .eight {color:black;font-size:12px;background-color:magenta;
          display:none;grid-column: 2/5;
          grid-row: 13/16;
       }
-   .eight:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
+   .eight:hover{background-color:red;}
    .p-8 {display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row: 1;
    }
-      .nine {background-color: rgba(252, 98, 33, 0.4);
+      .nine {;color:black;font-size:12px;background-color:cyan;
          display:none;grid-column: 2/4;
          grid-row: 15/18;
       }
-   .nine:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
+   .nine:hover{background-color:blue;}
    .p-9{display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row:1 ;
    }
-      .ten {background-color: rgba(33, 252, 222, 0.4);
+      .ten {color:black;font-size:12px;background-color:magenta;
          display:none;display:none;grid-column: 3/5;
          grid-row: 17/21;
       }
-   .ten:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
+   .ten:hover{background-color:red;}
    .p-10{display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
     grid-row: 1;
