--- a/site/css/style.css
+++ b/site/css/style.css
@@ -11,7 +11,7 @@ head{}
         max-width: 1200px;
         margin: 0 auto;
       }
-.wrapper > div { padding: 1em;font-family: 'Barlow Condensed', cursive;
+.wrapper > div { padding: 1em;font-family: 'Barlow Condensed', sans-serif;
 }
 .wrapper {
         display: grid;
@@ -19,44 +19,43 @@ head{}
         grid-gap: 0px;
         grid-auto-rows: minmax(100px, auto);
       }
-      .one {;color:black;font-size:12px;background-color:cyan;
+      .one {;color:black;font-size:80px;background-color:cyan;
         grid-column:2/4;
         grid-row: 1/3;
       }
    .one:hover{background-color:blue;
       grid-column:1/4;
-      grid-row:1/5
-            }
-            .p-1 {z-index:1;color:white;font-size:26px;
-              grid-column:1;
-              grid-row: 1/5;
-            }
+      grid-row:1/5}
 
-      .two {color:black;font-size:12px;background-color:magenta;
+      .p-1 {z-index:1;color:white;font-size:26px;
+         grid-column:1;
+         grid-row: 1/5;}
+
+      .two {color:black;font-size:80px;background-color:magenta;
         grid-column: 4/5;
-        grid-row: 1/4;
-      }
+        grid-row: 1/4;}
+
    .two:hover{background-color:red;
       grid-column: 4/7;
-     grid-row: 1/3;}
+      grid-row: 1/3;}
+
      .p-2 {z-index:1;color:white;font-size:26px;
       grid-column:5/7;
-      grid-row: 1/3;
-     }
+      grid-row: 1/3;}
 
       .three {;color:black;font-size:12px;background-color:cyan;
         display:none;grid-column: 4/6;
-        grid-row: 3/6;
-        }
+        grid-row: 3/6;}
+
    .three:hover{background-color:blue;}
    .p-3 {display:none;z-index:1;color:white;font-size:12px;
     grid-column:1;
-    grid-row: 1;
-   }
+    grid-row: 1;}
+
       .four {color:black;font-size:12px;background-color:magenta;
          display:none;grid-column: 2/5;
-        grid-row: 5/7;
-        }
+        grid-row: 5/7;}
+
    .four:hover{background-color:red;}
 
    .p-4 {display:none;z-index:1;color:white;font-size:12px;
