--- a/site/css/style.css
+++ b/site/css/style.css
@@ -43,14 +43,17 @@ head{}
       grid-column:5/7;
       grid-row: 1/3;}
 
-      .three {;color:black;font-size:12px;background-color:cyan;
-        display:none;grid-column: 4/6;
-        grid-row: 3/6;}
+      .three {;color:black;font-size:80px;background-color:cyan;
+        display:none;
+        grid-column: 4/7;
+        grid-row: 3/4;}
 
-   .three:hover{background-color:blue;}
-   .p-3 {display:none;z-index:1;color:white;font-size:12px;
-    grid-column:1;
-    grid-row: 1;}
+   .three:hover{background-color:blue;
+      grid-column: 5/7;
+      grid-row: 1/4;}
+   .p-3 {z-index:1;color:white;font-size:26px;
+    grid-column:5/7;
+    grid-row: 1/3;}
 
       .four {color:black;font-size:12px;background-color:magenta;
          display:none;grid-column: 2/5;
