--- a/site/css/style.css
+++ b/site/css/style.css
@@ -19,11 +19,11 @@ head{}
         grid-gap: 0px;
         grid-auto-rows: minmax(100px, auto);
       }
-      .one {text-align:right;color:black;font-size:80px;background-color:cyan;background-blend-mode:multiply
-        ;grid-column:2/4;
-        grid-row: 1/3;
+      .one {text-align:left;color:black;font-size:80px;background-color:cyan;
+        grid-column:2/5;
+        grid-row: 1/2;
       }
-   .one:hover{background-color:blue;
+   .one:hover{background-color:blue;text-align:right;
       grid-column:1/4;
       grid-row:1/5}
 
@@ -31,28 +31,28 @@ head{}
          grid-column:1;
          grid-row: 1/5;}
 
-      .two {color:black;font-size:80px;background-color:magenta;background-blend-mode:multiply
-        ;grid-column: 4/5;
+      .two {color:black;font-size:80px;background-color:magenta;
+        grid-column: 4/5;
         grid-row: 1/4;}
 
    .two:hover{background-color:red;
       grid-column: 4/7;
-      grid-row: 1/3;}
+      grid-row: 1/4;}
 
      .p-2 {z-index:1;color:white;font-size:26px;
       grid-column:5/7;
       grid-row: 1/3;}
 
-      .three {;color:black;font-size:80px;background-color:cyan;background-blend-mode:multiply;
+      .three {text-align:center;color:black;font-size:80px;background-color:cyan;
         grid-column: 4/7;
-        grid-row: 3/4;}
+        grid-row: 4/5;}
 
-   .three:hover{background-color:blue;
-      grid-column: 5/7;
-      grid-row: 3/6;}
+   .three:hover{background-color:blue;text-align:left;
+      grid-column: 4/7;
+      grid-row: 4/6;}
    .p-3 {z-index:1;color:white;font-size:26px;
-    grid-column:5/7;
-    grid-row: 4/6;}
+    grid-column:4/7;
+    grid-row: 5/6;}
 
       .four {color:black;font-size:12px;background-color:magenta;
          display:none;grid-column: 2/5;
