--- a/site/css/style.css
+++ b/site/css/style.css
@@ -23,7 +23,7 @@ head{}
         grid-column:2/5;
         grid-row: 1/2;
       }
-   .one:hover{background-color:blue;text-align:right;
+   .one:hover{background-color:blue;color:blue;
       grid-column:1/4;
       grid-row:1/5}
 
@@ -33,11 +33,11 @@ head{}
 
       .two {color:black;font-size:80px;background-color:magenta;
         grid-column: 4/5;
-        grid-row: 1/4;}
+        grid-row: 1/3;}
 
-   .two:hover{background-color:red;
+   .two:hover{background-color:red;color:red;
       grid-column: 4/7;
-      grid-row: 1/4;}
+      grid-row: 1/3;}
 
      .p-2 {z-index:1;color:white;font-size:26px;
       grid-column:5/7;
@@ -47,7 +47,7 @@ head{}
         grid-column: 5/7;
         grid-row: 5/7;}
 
-   .three:hover{background-color:blue;text-align:left;
+   .three:hover{background-color:blue;color:blue;
       grid-column: 5/7;
       grid-row: 3/7;}
    .p-3 {z-index:1;color:white;font-size:26px;
