--- a/site/css/style.css
+++ b/site/css/style.css
@@ -54,15 +54,17 @@ head{}
     grid-column:5/7;
     grid-row: 3/5;}
 
-      .four {color:black;font-size:12px;background-color:magenta;
+      .four {color:black;font-size:80px;background-color:magenta;
          display:none;grid-column: 2/5;
-        grid-row: 5/7;}
+        grid-row: 6/8;}
 
-   .four:hover{background-color:red;}
+   .four:hover{background-color:red;color:red;
+   grid-column:3/5;
+grid-row:4/7;}
 
-   .p-4 {display:none;z-index:1;color:white;font-size:12px;
-    grid-column:1;
-    grid-row: 1;
+   .p-4 {z-index:1;color:white;font-size:26px;
+    grid-column:3/5;
+    grid-row: 4/6;
    }
       .five {;color:black;font-size:12px;background-color:cyan;
          display:none;grid-column:1/3;
