--- a/site/css/style.css
+++ b/site/css/style.css
@@ -25,11 +25,11 @@ head{}
       }
    .one:hover{background-color:blue;color:blue;
       grid-column:1/4;
-      grid-row:1/5}
+      grid-row:1/4}
 
       .p-1 {z-index:1;color:white;font-size:26px;
-         grid-column:1;
-         grid-row: 1/5;}
+         grid-column:1/3;
+         grid-row: 2/4;}
 
       .two {color:black;font-size:80px;background-color:magenta;
         grid-column: 4/5;
