--- a/site/css/style.css
+++ b/site/css/style.css
@@ -66,16 +66,18 @@ grid-row:4/7;}
     grid-column:3/5;
     grid-row: 4/6;
    }
-      .five {;color:black;font-size:12px;background-color:cyan;
-         display:none;grid-column:1/3;
-         grid-row: 6/10;
+      .five {text-align:center;color:black;font-size:80px;background-color:cyan;
+         grid-column:3/4;
+         grid-row: 7/11;
       }
-   .five:hover{background-color:blue;}
-   .p-5 {display:none;z-index:1;color:white;font-size:12px;
-    grid-column:1;
-    grid-row: 1;
+   .five:hover{background-color:blue;color:blue;
+   grid-column:1/3;
+grid-row:9/11}
+   .p-5 {z-index:1;color:white;font-size:26px;
+    grid-column:1/3;
+    grid-row: 9/11;
    }
-      .six {color:black;font-size:12px;background-color:magenta;
+      .six {text-align:center;color:black;font-size:12px;background-color:magenta;
          display:none;grid-column: 2/5;
         grid-row: 9/11;
       }
