--- a/site/css/style.css
+++ b/site/css/style.css
@@ -19,7 +19,7 @@ head{}
         grid-gap: 0px;
         grid-auto-rows: minmax(100px, auto);
       }
-      .one {text-align:left;color:black;font-size:80px;background-color:cyan;
+      .one {text-align:left;color:black;font-size:80px;background-color:rgba(0,0,200,.5);
         grid-column:2/5;
         grid-row: 1/2;
       }
