--- a/site/css/style.css
+++ b/site/css/style.css
@@ -31,7 +31,7 @@ head{}
          grid-column:1/3;
          grid-row: 2/4;}
 
-      .two {color:black;font-size:80px;background-color:magenta;
+      .two {color:black;font-size:80px;background-color:rgba(200,0,0,.5);
         grid-column: 4/5;
         grid-row: 1/3;}
 
