--- a/site/css/style.css
+++ b/site/css/style.css
@@ -45,21 +45,21 @@ head{}
 
       .three {text-align:center;color:black;font-size:80px;background-color:cyan;
         grid-column: 5/7;
-        grid-row: 5/7;}
+        grid-row: 5/8;}
 
    .three:hover{background-color:blue;color:blue;
       grid-column: 5/7;
-      grid-row: 3/7;}
+      grid-row: 3/8;}
    .p-3 {z-index:1;color:white;font-size:26px;
     grid-column:5/7;
     grid-row: 3/5;}
 
       .four {color:black;font-size:80px;background-color:magenta;
          grid-column: 2/5;
-        grid-row: 6/8;}
+        grid-row: 6/7;}
 
    .four:hover{background-color:red;color:red;
-   grid-column:3/5;
+   grid-column:2/5;
 grid-row:4/7;}
 
    .p-4 {z-index:1;color:white;font-size:26px;
@@ -67,24 +67,26 @@ grid-row:4/7;}
     grid-row: 4/6;
    }
       .five {text-align:center;color:black;font-size:80px;background-color:cyan;
-         grid-column:3/4;
-         grid-row: 7/11;
+         grid-column:2/3;
+         grid-row: 6/10;
       }
    .five:hover{background-color:blue;color:blue;
    grid-column:1/3;
-grid-row:9/11}
+grid-row:6/10}
    .p-5 {z-index:1;color:white;font-size:26px;
-    grid-column:1/3;
-    grid-row: 9/11;
+    grid-column:1/2;
+    grid-row: 6/10
    }
-      .six {text-align:center;color:black;font-size:12px;background-color:magenta;
-         display:none;grid-column: 2/5;
-        grid-row: 9/11;
+      .six {text-align:left;color:black;font-size:80px;background-color:magenta;
+         grid-column: 3/5;
+        grid-row: 9/12;
       }
-   .six:hover{background-color:red;}
-   .p-6 {display:none;z-index:1;color:white;font-size:12px;
-    grid-column:1;
-    grid-row: 1;
+   .six:hover{background-color:red;color:red;
+   grid-column: 3/7;
+grid-row:9/12}
+   .p-6 {z-index:1;color:white;font-size:26px;
+    grid-column:5/7;
+    grid-row: 9/12;
    }
       .seven {;color:black;font-size:12px;background-color:cyan;
          display:none;grid-column: 4/6;
