--- a/site/css/style.css
+++ b/site/css/style.css
@@ -54,12 +54,12 @@ head{}
     grid-column:5/7;
     grid-row: 3/5;}
 
-      .four {color:black;font-size:80px;background-color:magenta;
-         grid-column: 2/5;
+      .four {text-align:center;color:black;font-size:80px;background-color:magenta;
+         grid-column: 3/5;
         grid-row: 6/7;}
 
    .four:hover{background-color:red;color:red;
-   grid-column:2/5;
+   grid-column:3/5;
 grid-row:4/7;}
 
    .p-4 {z-index:1;color:white;font-size:26px;
