--- a/site/css/style.css
+++ b/site/css/style.css
@@ -55,7 +55,7 @@ head{}
     grid-row: 3/5;}
 
       .four {text-align:center;color:black;font-size:80px;background-color:magenta;
-         grid-column: 3/5;
+         grid-column: 2/5;
         grid-row: 6/7;}
 
    .four:hover{background-color:red;color:red;
@@ -88,40 +88,49 @@ grid-row:9/12}
     grid-column:5/7;
     grid-row: 9/12;
    }
-      .seven {;color:black;font-size:12px;background-color:cyan;
-         display:none;grid-column: 4/6;
-         grid-row: 10/14;
+      .seven {;color:black;font-size:80px;background-color:cyan;
+         grid-column: 1/5;
+         grid-row: 14/15;
       }
-   .seven:hover{background-color:blue;}
-   .p-7 {display:none;z-index:1;color:white;font-size:12px;
-    grid-column:1;
-    grid-row: 1;
+   .seven:hover{background-color:blue;color:blue;
+   grid-column:1/4;
+grid-row:12/15}
+   .p-7 {z-index:1;color:white;font-size:26px;
+    grid-column:1/3;
+    grid-row: 12/14;
    }
-      .eight {color:black;font-size:12px;background-color:magenta;
-         display:none;grid-column: 2/5;
-         grid-row: 13/16;
+      .eight {color:black;font-size:80px;background-color:magenta;
+         grid-column: 4/5;
+         grid-row: 11/16;
       }
-   .eight:hover{background-color:red;}
-   .p-8 {display:none;z-index:1;color:white;font-size:12px;
-    grid-column:1;
-    grid-row: 1;
+   .eight:hover{background-color:red;color:red;
+   grid-column:4/7;
+grid-row:12/16}
+   .p-8 {z-index:1;color:white;font-size:26px;
+    grid-column:6/7;
+    grid-row: 12/15;
    }
-      .nine {;color:black;font-size:12px;background-color:cyan;
-         display:none;grid-column: 2/4;
-         grid-row: 15/18;
+      .nine {color:black;font-size:80px;background-color:cyan;
+         grid-column: 4/7;
+         grid-row: 16/18;
       }
-   .nine:hover{background-color:blue;}
-   .p-9{display:none;z-index:1;color:white;font-size:12px;
-    grid-column:1;
-    grid-row:1 ;
+   .nine:hover{background-color:blue;color:blue;
+      grid-column:4/7;
+      grid-row:16/20
    }
-      .ten {color:black;font-size:12px;background-color:magenta;
-         display:none;display:none;grid-column: 3/5;
-         grid-row: 17/21;
+   .p-9{z-index:1;color:white;font-size:26px;
+    grid-column:4/6;
+    grid-row:18/20 ;
+   }
+      .ten {color:black;font-size:80px;background-color:magenta;
+         grid-column: 2/4;
+         grid-row: 18/21;
       }
-   .ten:hover{background-color:red;}
-   .p-10{display:none;z-index:1;color:white;font-size:12px;
-    grid-column:1;
-    grid-row: 1;
+   .ten:hover{background-color:red;color:red;
+   grid-column:2/6;
+grid-row:18/21}
+   .p-10{z-index:1;color:white;font-size:26px;
+    grid-column:4/6;
+    grid-row: 18/20;
    }
    footer{}
