--- a/site/css/style.css
+++ b/site/css/style.css
@@ -2,7 +2,8 @@ head{}
    body{}
       header{margin:auto;}
       h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:center;font-size:200px}
-         h2{text-align:center;font-size:40px;}
+         h2{text-align:center;font-size:40px;font-family: 'Barlow Condensed', sans-serif;}
+         h2 span{font-style:italic;}
    main{padding:80px}
 
       * {box-sizing: border-box;}
