--- a/site/css/style.css
+++ b/site/css/style.css
@@ -20,11 +20,11 @@ head{}
         grid-gap: 0px;
         grid-auto-rows: minmax(100px, auto);
       }
-      .one {text-align:left;color:black;font-size:80px;background-color:rgba(0, 255, 255, 0.3);
+      .one {text-align:left;color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
         grid-column:2/5;
         grid-row: 1/2;
       }
-   .one:hover{background-color:cyan;color:cyan;
+   .one:hover{background-color:#0070C5;color:#0070C5;
       grid-column:1/4;
       grid-row:1/4}
 
@@ -32,11 +32,11 @@ head{}
          grid-column:1/3;
          grid-row: 2/4;}
 
-      .two {color:black;font-size:80px;background-color:rgba(255, 0, 255, 0.3);
+      .two {color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
         grid-column: 4/5;
         grid-row: 1/5;}
 
-   .two:hover{background-color:magenta;color:magenta;
+   .two:hover{background-color:#ED0600;color:#ED0600;
       grid-column: 4/7;
       grid-row: 1/3;}
 
@@ -44,22 +44,22 @@ head{}
       grid-column:5/7;
       grid-row: 1/3;}
 
-      .three {text-align:center;color:black;font-size:80px;background-color:rgba(0, 255, 255, 0.3);
+      .three {text-align:center;color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
         grid-column: 5/7;
         grid-row: 5/8;}
 
-   .three:hover{background-color:cyan;color:cyan;
+   .three:hover{background-color:#0070C5;color:#0070C5;
       grid-column: 5/7;
       grid-row: 3/8;}
    .p-3 {z-index:1;color:white;font-size:26px;
     grid-column:5/7;
     grid-row: 3/5;}
 
-      .four {text-align:center;color:black;font-size:80px;background-color:rgba(255, 0, 255, 0.3);
+      .four {text-align:center;color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
          grid-column: 2/5;
         grid-row: 6/7;}
 
-   .four:hover{background-color:magenta;color:magenta;
+   .four:hover{background-color:#ED0600;color:#ED0600;
    grid-column:2/5;
 grid-row:5/7;}
 
@@ -67,55 +67,55 @@ grid-row:5/7;}
     grid-column:2/5;
     grid-row: 5/6;
    }
-      .five {text-align:center;color:black;font-size:80px;background-color:rgba(0, 255, 255, 0.3);
+      .five {text-align:center;color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
          grid-column:2/3;
          grid-row: 6/10;
       }
-   .five:hover{background-color:cyan;color:cyan;
+   .five:hover{background-color:#0070C5;color:#0070C5;
    grid-column:1/3;
 grid-row:6/10}
    .p-5 {z-index:1;color:white;font-size:26px;
     grid-column:1/2;
     grid-row: 6/10
    }
-      .six {text-align:left;color:black;font-size:80px;background-color:rgba(255, 0, 255, 0.3);
+      .six {text-align:left;color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
          grid-column: 3/5;
         grid-row: 9/12;
       }
-   .six:hover{background-color:magenta;color:magenta;
+   .six:hover{background-color:#ED0600;color:#ED0600;
    grid-column: 3/7;
 grid-row:9/12}
    .p-6 {z-index:1;color:white;font-size:26px;
     grid-column:5/7;
     grid-row: 9/12;
    }
-      .seven {;color:black;font-size:80px;background-color:rgba(0, 255, 255, 0.3);
+      .seven {;color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
          grid-column: 1/5;
          grid-row: 14/15;
       }
-   .seven:hover{background-color:cyan;color:cyan;
+   .seven:hover{background-color:#0070C5;color:#0070C5;
    grid-column:1/4;
 grid-row:12/15}
    .p-7 {z-index:1;color:white;font-size:26px;
     grid-column:1/3;
     grid-row: 12/14;
    }
-      .eight {color:black;font-size:80px;background-color:rgba(255, 0, 255, 0.3);
+      .eight {color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
          grid-column: 4/5;
          grid-row: 11/16;
       }
-   .eight:hover{background-color:magenta;color:magenta;
+   .eight:hover{background-color:#ED0600;color:#ED0600;
    grid-column:4/7;
 grid-row:12/16}
    .p-8 {z-index:1;color:white;font-size:26px;
     grid-column:6/7;
     grid-row: 12/15;
    }
-      .nine {color:black;font-size:80px;background-color:rgba(0, 255, 255, 0.3);
+      .nine {color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
          grid-column: 4/7;
          grid-row: 16/18;
       }
-   .nine:hover{background-color:cyan;color:cyan;
+   .nine:hover{background-color:#0070C5;color:#0070C5;
       grid-column:2/7;
       grid-row:16/18
    }
@@ -123,11 +123,11 @@ grid-row:12/16}
     grid-column:2/4;
     grid-row:16/18;
    }
-      .ten {color:black;font-size:80px;background-color:rgba(255, 0, 255, 0.3);
+      .ten {color:black;font-size:80px;background-color:rgba(237, 6, 0, 0.5);
          grid-column: 2/4;
          grid-row: 18/21;
       }
-   .ten:hover{background-color:magenta;color:magenta;
+   .ten:hover{background-color:#ED0600;color:#ED0600;
    grid-column:2/6;
 grid-row:18/21}
    .p-10{z-index:1;color:white;font-size:26px;
