--- a/site/css/style.css
+++ b/site/css/style.css
@@ -24,7 +24,7 @@ head{}
         grid-column:2/5;
         grid-row: 1/2;
       }
-   .one:hover{background-color:cyan;color:cyan;
+   .one:hover{background-color:#0070C5;color:#0070C5;
       grid-column:1/4;
       grid-row:1/4}
 
@@ -48,7 +48,7 @@ head{}
         grid-column: 5/7;
         grid-row: 5/8;}
 
-   .three:hover{background-color:cyan;color:cyan;
+   .three:hover{background-color:#0070C5;color:#0070C5;
       grid-column: 5/7;
       grid-row: 3/8;}
    .p-3 {z-index:1;color:white;font-size:26px;
@@ -71,7 +71,7 @@ grid-row:5/7;}
          grid-column:2/3;
          grid-row: 6/10;
       }
-   .five:hover{background-color:cyan;color:cyan;
+   .five:hover{background-color:#0070C5;color:#0070C5;
    grid-column:1/3;
 grid-row:6/10}
    .p-5 {z-index:1;color:white;font-size:26px;
@@ -93,7 +93,7 @@ grid-row:9/12}
          grid-column: 1/5;
          grid-row: 14/15;
       }
-   .seven:hover{background-color:cyan;color:cyan;
+   .seven:hover{background-color:#0070C5;color:#0070C5;
    grid-column:1/4;
 grid-row:12/15}
    .p-7 {z-index:1;color:white;font-size:26px;
@@ -115,7 +115,7 @@ grid-row:12/16}
          grid-column: 4/7;
          grid-row: 16/18;
       }
-   .nine:hover{background-color:cyan;color:cyan;
+   .nine:hover{background-color:#0070C5;color:#0070C5;
       grid-column:2/7;
       grid-row:16/18
    }
