--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,9 +1,11 @@
 head{}
    body{}
-      header{margin:auto;}
+      header{background-color:rgba(237, 6, 0, 0.5);position:fixed;width:25%;margin-left:1200px;}
       h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:center;font-size:200px}
          h2{text-align:center;font-size:60px;font-family: 'Barlow Condensed', sans-serif;}
-         h2 span{}
+
+h3{background-color:rgba(0, 112, 197, 0.5)}
+
    main{padding:80px}
 
       * {box-sizing: border-box;}
