--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,12 +1,12 @@
 head{}
    body{}
-      header{background-color:rgba(237, 6, 0, 0.5);position:fixed;width:2%;float:left;}
+      header{background-color:rgba(237, 6, 0, 0.5);position:fixed;width:20%;float:right}
       h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:center;font-size:150px}
          h2{text-align:center;font-size:60px;font-family: 'Barlow Condensed', sans-serif;}
 
 h3{background-color:rgba(0, 112, 197, 0.5)}
 
-   main{padding:80px;width:50%;}
+   main{padding:80px}
 
       * {box-sizing: border-box;}
       * {box-sizing: border-box;}
