--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,10 +1,11 @@
 head{}
    body{}
-      header{background-color:rgba(237, 6, 0, 0.5);position:fixed;width:20%;float:right}
-      h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:center;font-size:150px}
+      header{background-color:rgba(237, 6, 0, 0.5);width:70%}
+      h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:left;font-size:150px}
          h2{text-align:center;font-size:60px;font-family: 'Barlow Condensed', sans-serif;}
 
-h3{background-color:rgba(0, 112, 197, 0.5)}
+h3{background-color:rgba(0, 112, 197, 0.5);width:40%;
+   font-family: 'Wire One', sans-serif;text-align:right;font-size:100px;float:right}
 
    main{padding:80px}
 
